<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="persons_title">Персонажи</string>
    <string name="location">Last known location</string>
    <string name="origin">Origin</string>
    <string name="empty_placeholder">Ничего не найдено</string>
    <string name="error_connection">Ошибка соединения</string>
    <string name="gender">Gender</string>
    <string name="episodes">Number of episodes</string>
    <string name="species">Species</string>
    <string name="created">Was created</string>
    <string name="person_details_title">Персонаж</string>
    <string name="search">Поиск</string>
    <string name="enter_person_name">Введите имя персонажа</string>
    <string name="reset">Сбросить</string>
</resources>